--- a/kairos/scheduling/templates/login.html
+++ b/kairos/scheduling/templates/login.html
@@ -60,7 +60,9 @@
         </div>
     {% endfor %}
     <br>
-    <h1 class="text-center">KAIROS LOGISTICS - APP DE TURNOS</h1>
+    <h1 class="text-center">KAIROS LOGISTICS</h1>
+	<br>
+	<h2 class="text-center">APP DE TURNOS</h2>
 	<div class="login-form">
 		<form class="form" method="POST">
             {% csrf_token %}
@@ -73,7 +75,10 @@
 			</div>
 			<div class="form-group">
 				<button type="submit" class="btn btn-primary btn-block">Ingresar</button>
-			</div>       
+			</div>
+			<div class="text-center">
+				<a href="#">Cambiar contraseña</a>
+			</div>
 		</form>
 	</div>
 </body>
