--- a/kairos/scheduling/templates/0-1-delete_user.html
+++ b/kairos/scheduling/templates/0-1-delete_user.html
@@ -7,11 +7,14 @@
 <!-- AQUI TOCA ESTABLECER IS SE VA A USAR EL NAVBAR DE MANAGER O DE ADMIN, ASÍ QUE OJO -->
 
 {% block navbar %}
-    <!-- IF ES MANEGER -->
-    {% include '0-manager/navbar-manager.html' %} 
-
-    <!-- ELSE IF ES ADMIN -->
-    <!-- include etc etc navbar-damin -->
+    <!-- IF MANAGER -->
+    {% if role == 0 %}
+        {% include '0-manager/navbar-manager.html' %} 
+    {% endif %}
+    <!-- IF ADMIN -->
+    {% if role == 1 %}
+        {% include '1-admin\navbar-admin.html' %} 
+    {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -26,9 +29,9 @@
                 {% csrf_token %}
 
                 <div class="form__field form__field--3">
-                    <label class="form__username-label form-label" for="input-username">Nombre de usuario</label>
+                    <label class="form__username-label form-label" for="input-username">Nombre de usuario a eliminar</label>
                     <br>
-                    <select name="user_deleted" required>
+                    <select class="form-select" name="user_deleted" required>
                         {% for user in users %}
                         <option value="{{user.id}}">{{ user.username }}</option>
                         {% endfor %}
