--- a/kairos/scheduling/templates/0-1-create_user.html
+++ b/kairos/scheduling/templates/0-1-create_user.html
@@ -77,7 +77,7 @@
 
                 <br>
                 <div class="form-group text-center my-0">
-                    <button class="form__button btn btn-primary btn-lg btn-outline-light" type="submit">Enviar</button>
+                    <button class="form__button btn btn-secondary btn-outline-light btn-lg" type="submit">Enviar</button>
                 </div>
 
             </form>
