--- a/kairos/scheduling/templates/0-1-delete_user.html
+++ b/kairos/scheduling/templates/0-1-delete_user.html
@@ -40,7 +40,7 @@
                 
                 <br>
                 <div class="form__field form__field--9 text-center my-0">
-                    <button class="form__button btn btn-primary btn-lg btn-outline-light" type="submit">Enviar</button>
+                    <button class="form__button btn btn-secondary btn-lg btn-outline-light" type="submit">Enviar</button>
                 </div>
 
             </form>
