La funcionalidad de bloqueo de horarios está lista

--- a/kairos/scheduling/templates/0-1-block_schedule.html
+++ b/kairos/scheduling/templates/0-1-block_schedule.html
@@ -95,12 +95,12 @@
                             </div>
                             <input type="hidden" name="cvsName" value="{{cvsName}}">
                         </div>
+                        
+                        <br><br>
 
                         <div class="row">
-                            <div class="input-group">
-                                <label class="input-group-text" for="comment">Explique por qué se está generando el bloqueo</label>
-                                <textarea class="form-control" type="text" name="comment" id="comment" maxlength="300" required>{{comment}}</textarea>
-                            </div>
+                            <h2>Explique por qué se está generando el bloqueo</h2>
+                            <textarea class="form-control" type="text" name="comment" id="comment" maxlength="300" required>{{comment}}</textarea>
                         </div>
 
                         <!-- start confirm modal -->
