--- a/kairos/scheduling/templates/login.html
+++ b/kairos/scheduling/templates/login.html
@@ -77,7 +77,7 @@
 				<button type="submit" class="btn btn-primary btn-block">Ingresar</button>
 			</div>
 			<div class="text-center">
-				<a href="#">Cambiar contraseña</a>
+				<a class="nav-link" href="{% url 'change_password' %}">Cambiar contraseña</a>
 			</div>
 		</form>
 	</div>
