--- a/kairos/scheduling/templates/0-manager/navbar-manager.html
+++ b/kairos/scheduling/templates/0-manager/navbar-manager.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="{% url 'block_schedule' %}">Bloquear horarios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Salir</a>
+            <a class="nav-link" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i> Salir</a>
           </li>
         </ul>
       </div>
