--- a/kairos/scheduling/templates/1-2-time_turns.html
+++ b/kairos/scheduling/templates/1-2-time_turns.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'schedules.css'%}">
-<link rel="stylesheet" href="{% static 'sel_mod_turn.css'%}">
+<link rel="stylesheet" href="{% static 'sel_mod_turns.css'%}">
 {% endblock %}
 
 {% block title %}
@@ -32,13 +32,14 @@
 
 {% block content %}
     <div class="full-container">
-        <div class="sc-displayer">
+        {% include 'btnResponsive.html' %}
+        <div class="sc-displayer" id="sc-displayer">
             <h2>Previsualización del horario</h2>
             {% if cvsName %} 
                 {% include 'base_schedule.html' %}
             {% endif %}
         </div>
-        <div class="form-displayer">
+        <div class="form-displayer" id="form-displayer">
             <!-- section to change the cvs -->
             <form style="margin: 2em;" action="{% url 'time_turns' %}" method="post">
                 {%csrf_token%}
@@ -76,7 +77,7 @@
                     </ul>
                 </div>
             </div>
-            <div style="margin: 0 2em; display: flex; flex-direction: row-reverse; justify-content: space-between; flex-wrap: wrap;">
+            <div style="margin: 0.5em 2em; display: flex; flex-direction: row-reverse; justify-content: space-between; flex-wrap: wrap;">
                 <form action="{% url 'select_turns' %}" method="post">
                     {%csrf_token%}
                     <!-- info to keep -->
