--- a/kairos/scheduling/templates/1-admin/navbar-admin.html
+++ b/kairos/scheduling/templates/1-admin/navbar-admin.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="{% url 'validate_service_provided' %}">Validar servicios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Salir</a>
+            <a class="nav-link" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i> Salir</a>
           </li>
         </ul>
       </div>
