--- a/kairos/scheduling/templates/1-validate_service_provided.html
+++ b/kairos/scheduling/templates/1-validate_service_provided.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'schedules.css'%}">
-<link rel="stylesheet" href="{% static 'sel_mod_turn.css'%}">
+<link rel="stylesheet" href="{% static 'sel_mod_turns.css'%}">
 {% endblock %}
 
 {% block title %}
@@ -32,11 +32,12 @@
 
 {% block content %}
     <div class="full-container">
-        <div class="sc-displayer">
+        {% include 'btnResponsive.html' %}
+        <div class="sc-displayer" id="sc-displayer">
             <h2>Visualización del horario</h2> 
             {% include 'base_schedule.html' %}
         </div>
-        <div class="form-displayer">
+        <div class="form-displayer" id="form-displayer">
             <!-- section By date and time -->
             <h2>Búsqueda por fecha y hora</h2>
             <form style="margin: 2em;" action="{% url 'validate_service_provided' %}" method="post">
