--- a/kairos/scheduling/templates/1-validate_turn.html
+++ b/kairos/scheduling/templates/1-validate_turn.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block styles %}
-<link rel="stylesheet" href="{% static 'sel_mod_turn.css'%}">
+<link rel="stylesheet" href="{% static 'sel_mod_turns.css'%}">
 <script src="{% static 'hide.js'%}"></script>
 {% endblock %}
 
