--- a/kairos/scheduling/templates/2-adviser/navbar-adviser.html
+++ b/kairos/scheduling/templates/2-adviser/navbar-adviser.html
@@ -13,7 +13,7 @@
           <a class="nav-link" href="{% url 'asign_turns' %}">Asignar turnos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'logout' %}">Salir</a>
+          <a class="nav-link" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i> Salir</a>
         </li>
       </ul>
     </div>
