--- a/kairos/scheduling/templates/3-operator/navbar-operator.html
+++ b/kairos/scheduling/templates/3-operator/navbar-operator.html
@@ -10,7 +10,7 @@
             <a class="nav-link" href="{% url 'see_schedules' %}">Ver turnos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'logout' %}">Salir</a>
+            <a class="nav-link" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right"></i> Salir</a>
           </li>
         </ul>
       </div>
