--- a/kairos/scheduling/static/sel_mod_turns.css
+++ b/kairos/scheduling/static/sel_mod_turns.css
@@ -80,6 +80,11 @@ a.bookmark:hover, a.bookmark:active{
     border-radius:  0 0 3px 3px;
 }
 
+.input-group label{
+    width: 50%;
+    text-wrap: balance;
+}
+
 @media screen and (max-width: 700px) {
     .full-container{
         display: flex;
